test/official_tests/method/extra_arguments.lox
class Foo {
  method(a, b) {
    print a;
    print b;
  }
}

Foo().method(1, 2, 3, 4); // error: {"line":8,"message":"Function 'method' expected 2 arguments but got 4","type":"RuntimeError"}
